getting client's family/caregivers won't show their private info anymore salt_rounds isn't saved in db anymore
